<resources>
    <string name="app_name">Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Lana Del Rey</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="user_name">User Name</string>
    <string name="enter_user_name">   Enter User Name</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Enter Email</string>
    <string name="save">Save</string>
    <string name="success">Success!</string>
</resources>